# hse-se-cpp-2024-fluids

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  error.txt  fixed.hpp  main.cpp  parallel_sim.hpp  sim_gen.hpp  simulation.hpp  vector_field.hpp
